--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@ Released under the GPLv3 License
 
 <span class="grav" style="background-color:red; font-size:80pt;">O</span>
 
-<span class="grav" style="background-color:red; font-size:80pt;">W</span>
+<span class="grav" style="background-color:red; font-size:80pt;">.</span>
 </center>
 
 
